--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>
       heroicons-animated-angular | Free Animated Heroicons for Angular
     </title>
-    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta
       name="description"
@@ -34,22 +33,16 @@
       content="heroicons-animated-angular - Animated Heroicons Library for Angular"
     >
     <meta name="theme-color" content="#f5f5f5">
-    <link rel="canonical" href="/">
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/favicon.png?v=20260215"
-    >
-    <link rel="shortcut icon" type="image/png" href="/favicon.png?v=20260215">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Geist+Mono:wght@100..900&family=Press+Start+2P&display=swap"
       rel="stylesheet"
     >
+    <link rel="icon" type="image/png" href="/favicon.png">
   </head>
   <body>
     <app-root></app-root>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
